fix: NavAside z-index 버그 해결

--- a/src/layouts/MainLayout.module.scss
+++ b/src/layouts/MainLayout.module.scss
@@ -8,4 +8,6 @@
 .main {
     @include layout;
     margin-top: $nav-height;
+    position: relative;
+    z-index: 0;
 }
